Closed Bug 461849 Opened 17 years ago Closed 16 years ago

icon decoder wince fixes

Categories

(Core :: Graphics: ImageLib, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

VERIFIED FIXED

People

(Reporter: dougt, Assigned: dougt)

References

Details

(Keywords: fixed1.9.1)

Attachments

(1 file, 1 obsolete file)

we removed much of the code in our wince shunt library. This patch allows icon decoder to build.
Attached patch patch v.1 (obsolete) — Splinter Review
Assignee: nobody → doug.turner
Attachment #344983 - Flags: review?(pavlov)
Comment on attachment 344983 [details] [diff] [review] patch v.1 does it make sense to just not build the icon decoder rather than disabling it?
we could try that too!
disabled icon decoder.
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → WONTFIX
pav, review ping? If we're not going to fix icon decoder, can you explain why on the bug?
we simply disabled the icon decoder via configure. we could enable it, but not sure why we need the support on windows mobile.
Is this the cause of favicons not being displayed?
Status: RESOLVED → REOPENED
tracking-fennec: --- → ?
Resolution: WONTFIX → ---
Attached patch patch v.2Splinter Review
same as before, just updated to the tip of m-c. Without this patch, and simply disabling icon decoder support via configure, we do not display favicons.
Attachment #344983 - Attachment is obsolete: true
Attachment #362916 - Flags: review?(pavlov)
Attachment #344983 - Flags: review?(pavlov)
Comment on attachment 362916 [details] [diff] [review] patch v.2 please add some comments as to why we can't implement those functions.
Attachment #362916 - Flags: review?(pavlov) → review+
Attachment #362916 - Flags: approval1.9.1?
marking fixed. needs to land on 1.9.1
Status: REOPENED → RESOLVED
Closed: 16 years ago16 years ago
Resolution: --- → FIXED
Comment on attachment 362916 [details] [diff] [review] patch v.2 a191=beltzner
Attachment #362916 - Flags: approval1.9.1? → approval1.9.1+
I can view favicons on HTC Touch. verified FIXED on build: Mozilla/5.0 (Windows; U; WindowsCE 5.2; en-US; rv:1.9.3a1pre) Gecko/20090818 Fennec/1.0a3pre
Status: RESOLVED → VERIFIED
tracking-fennec: ? → ---
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: