Bug 461849 - enable icon decoder on Windows Mobile. r=stuart